Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-20249

sanity-quota test_98: Failed to create directory on another MDT

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Medium Medium
    • Lustre 2.18.0
    • None
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for Marc Vef <mvef@whamcloud.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/cce5f8e2-61cc-43a7-8a29-3edd80fa8256

      test_98 failed with the following error:

      Failed to create directory on another MDT
      

      Test session details:
      clients: https://build.whamcloud.com/job/lustre-reviews/124870 - 4.18.0-553.117.1.el8_10.x86_64
      servers: https://build.whamcloud.com/job/lustre-reviews/124870 - 4.18.0-553.117.1.el8_lustre.x86_64

      trevis-153vm194.trevis.whamcloud.com: executing wait_import_state_mount FULL mdc.lustre-MDT0003-mdc-*.mds_server_uuid
      CMD: trevis-153vm194.trevis.whamcloud.com lctl get_param -n at_max
      mdc.lustre-MDT0003-mdc-*.mds_server_uuid in FULL state after 0 sec
      CMD: trevis-153vm198 /usr/sbin/lctl set_param fail_loc=0x80000A02
      fail_loc=0x80000A02
      lmv.lustre-clilmv-ff4cf7cf02b07800.qos_threshold_rr=100
      lmv.lustre-clilmv-ff4cf7cf02b07800.qos_maxage=10
      First MDT: 2, expected retry MDT: 3
       sanity-quota test_98: @@@@@@ FAIL: Failed to create directory on another MDT 
        Trace dump:
        = /usr/lib64/lustre/tests/test-framework.sh:7409:error()
        = /usr/lib64/lustre/tests/sanity-quota.sh:7952:test_98()
        = /usr/lib64/lustre/tests/test-framework.sh:7785:run_one()
        = /usr/lib64/lustre/tests/test-framework.sh:7848:run_one_logged()
        = /usr/lib64/lustre/tests/test-framework.sh:7663:run_test()
        = /usr/lib64/lustre/tests/sanity-quota.sh:7956:main()
      

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      sanity-quota test_98 - Failed to create directory on another MDT

            ckansal Chakshu Kansal
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: