LU-20249 lmv: improve quota-aware MDT retry testing

Add MDT-specific EDQUOT injection via fail_val for
independent quota testing. Improve random MDT selection
by adding 1 before get_random_u32_below(count - 1) to
avoid selecting the current MDT and reduce unnecessary
fallback iterations.

Add parameter verification to sanity-quota test_98.

Fixes: 3780efa1c7 ("LU-18022 lmv: quota-aware MDT selection on -EDQUOT")
Change-Id: I74de7c35d0125d416b735772a4d1111978334be7
Signed-off-by: Chakshu Kansal <ckansal@ddn.com>
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/65948
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Marc Vef <mvef@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>